fixed hover color in dark mode

--- a/style.css
+++ b/style.css
@@ -91,4 +91,9 @@ body {
         color: #ccc;
       }
 
+      .tab button:hover {
+        background-color: #ddd;
+        color: #222;
+      }
+
 }
